--- a/leisure/src/main/resources/templates/usuario/meus-anuncios.html
+++ b/leisure/src/main/resources/templates/usuario/meus-anuncios.html
@@ -11,16 +11,16 @@
 
     <!-- SWIPER -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" /> -->
-    <link href="@{style/swiper/swiper-bundle.css}" rel="stylesheet" />
+    <link  rel="Stylesheet" type="text/css" th:href="@{/style/swiper/swiper-bundle.css}"/>
 
     <!-- @MEDIA -->
-    <link th:href="@{style/mediaStyleBoot.css}" rel="Stylesheet"/>
+    <link  rel="Stylesheet" type="text/css" th:href="@{/style/mediaStyleBoot.css}"/>
 
     <!-- FONTAWESOME 6.4.2 ICONS -->
     <!-- <script src="https://kit.fontawesome.com/4c7894104f.js" crossorigin="anonymous"></script> -->
-    <link href="@{style/fontawesome/css/all.css}" rel="Stylesheet" />
-    <link href="@{style/fontawesome/css/brands.css}" rel="Stylesheet" />
-    <link href="@{style/fontawesome/css/fontawesome.css}" rel="Stylesheet" />
+    <link rel="Stylesheet" type="text/css" th:href="@{/style/fontawesome/css/all.css}"/>
+    <link rel="Stylesheet" type="text/css" th:href="@{/style/fontawesome/css/brands.css}"/>
+    <link rel="Stylesheet" type="text/css" th:href="@{/style/fontawesome/css/fontawesome.css}"/>
 </head>
 <body>
   <div class="container-fluid">
