--- a/leisure/src/main/resources/templates/usuario/meus-dados.html
+++ b/leisure/src/main/resources/templates/usuario/meus-dados.html
@@ -14,7 +14,7 @@
     <!-- <link href="./style/swiper/swiper-bundle.css" rel="stylesheet"/> -->
     
     <!-- @MEDIA -->
-    <link th:href="@{style/mediaStyleBoot.css}" rel="Stylesheet"/>
+    <link  rel="Stylesheet" type="text/css" th:href="@{/style/mediaStyleBoot.css}"/>
     
     <!-- FONTAWESOME 6.4.2 ICONS -->
     <script src="https://kit.fontawesome.com/4c7894104f.js" crossorigin="anonymous"></script>
@@ -108,6 +108,6 @@
   </div>
   <!-- -----------------------------------------------------------------SCRIPTS------------------------------------------------------------------ -->
   <!-- JS -->
-  <script src="@{style/ScriptBoot.js}"></script>
+  <script th:src="@{/style/ScriptBoot.js}"></script>
 </body>
 </html>
