--- a/leisure/src/main/resources/templates/usuario/faq.html
+++ b/leisure/src/main/resources/templates/usuario/faq.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leisuri Imóveis</title>
-  <link rel="icon" type="image/x-icon" href="/imagem/leisuriLogo.png">
+  <link rel="icon" type="image/x-icon" th:href="@{/imagem/leisuriLogo.png}">
   <meta name="viewport" content="width=device-width">
   <!-- -----------------------------------------------------------------ESTILOS------------------------------------------------------------------ -->
   <!-- BOOTSTRAP CSS -->
@@ -17,7 +17,7 @@
   <!-- <link href="./style/swiper/swiper-bundle.css" rel="stylesheet"/> -->
   
   <!-- @MEDIA -->
-  <link th:href="@{style/mediaStyleBoot.css}" rel="Stylesheet"/>
+  <link  rel="Stylesheet" type="text/css" th:href="@{/style/mediaStyleBoot.css}"/>
   
   <!-- FONTAWESOME 6.4.2 ICONS -->
   <script src="https://kit.fontawesome.com/4c7894104f.js" crossorigin="anonymous"></script>
@@ -44,7 +44,7 @@
     </div>
     <nav class="navMargin navbar navbar-expand-sm fixed-top mb-2">
       <div id="nav-fixed" class="container">
-        <div id="hoverMenu" class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div id="hoverMenu" class="collapse navbar-collapse">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>
@@ -86,7 +86,7 @@
   <div class="pequeno">
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid ">
-        <img id="mini-home" class="navbar-brand" src="./imagem/mini-home.png" alt="Inicio">
+        <img id="mini-home" class="navbar-brand" th:src="@{/imagem/mini-home.png}" alt="Inicio">
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -143,13 +143,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide mt-2" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="5000">
-              <img src="./anuncio/anuncio1.png" class="d-block w-100" alt="Banner">
+              <img th:src="@{/anuncio/anuncio1.png}" class="d-block w-100" alt="Banner">
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-              <img src="./anuncio/anuncio2.png" class="d-block w-100" alt="Banner">
+              <img th:src="@{/anuncio/anuncio2.png}" class="d-block w-100" alt="Banner">
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-              <img src="./anuncio/anuncio3.png" class="d-block w-100" alt="Banner">
+              <img th:src="@{/anuncio/anuncio3.png}" class="d-block w-100" alt="Banner">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -171,7 +171,7 @@
         <span class="ms-5">R: Não. É essencial que você tenha um cadastro para trabalhar em seu anúncio.<br></span>
       </div>
       <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-        <img  class="me-5" src="./imagem/newUser.png" alt="Preciso pagar?" width="300px">
+        <img  class="me-5" th:src="@{/imagem/newUser.png}" alt="Preciso pagar?" width="300px">
       </div>
 
       <div class="Faq col-8 d-flex flex-column justify-content-center mt-3 rounded-start-4">
@@ -180,7 +180,7 @@
         <span class="ms-5">Fica opcional do usuário adquirir um pacote.</span>
       </div>
       <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-        <img class="me-5" src="./imagem/money.png" alt="Preciso pagar?" width="300px" >
+        <img class="me-5" th:src="@{/imagem/money.png}" alt="Preciso pagar?" width="300px" >
       </div>
 
       <div class="Faq col-8 d-flex flex-column justify-content-center mt-3 rounded-start-4">
@@ -189,7 +189,7 @@
         <span class="ms-5">Para que seu anúncio permaneca por mais tempo, é necessário adquirir um pacote.</span>
       </div>
       <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-        <img class="me-5" src="./imagem/megaFone.png" alt="Preciso pagar?" width="300px">
+        <img class="me-5" th:src="@{/imagem/megaFone.png}" alt="Preciso pagar?" width="300px">
       </div>
 
       <div class="Faq col-8 d-flex flex-column justify-content-center mt-3 rounded-start-4">
@@ -198,7 +198,7 @@
         <span class="ms-5">Vale salientar que anúncios com valores muito atrativos devem ser tratados com cautela.</span>
       </div>
       <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-        <img class="me-5" src="./imagem/security.png" alt="Preciso pagar?" width="300px" >
+        <img class="me-5" th:src="@{/imagem/security.png}" alt="Preciso pagar?" width="300px" >
       </div>
 
       <div class="Faq col-8 d-flex flex-column justify-content-center mt-3 rounded-start-4">
@@ -207,7 +207,7 @@
         <!-- <span class="ms-5">Vale salientar que anúncios com valores muito atrativos devem ser tratados com cautela.</span> -->
       </div>
       <div class="Faq col-4 d-flex justify-content-center mt-3 rounded-end-4">
-        <img class="me-5" src="./imagem/contrato.png" alt="Preciso pagar?" width="300px" >
+        <img class="me-5" th:src="@{/imagem/contrato.png}" alt="Preciso pagar?" width="300px" >
       </div>
 
     </div>
@@ -375,6 +375,6 @@
   <!-- <script src="./style/bootstrap/js/bootstrap.js"></script> -->
   <!-- <script src="./style/bootstrap/js/bootstrap.bundle.js"></script> -->
   <!-- JS -->
-  <script src="@{style/ScriptBoot.js}"></script>
+  <script th:src="@{/style/ScriptBoot.js}"></script>
 </body>
 </html>
