--- a/leisure/src/main/resources/templates/usuario/usuarios.html
+++ b/leisure/src/main/resources/templates/usuario/usuarios.html
@@ -23,7 +23,7 @@
 				<th>Endereço</th>
 				<th>Senha</th>
 			</tr>
-			<tr th:each="login : ${usuarios}">
+			<tr th:each="usuario : ${usuarios}">
 				<td>
 					<span th:text="${usuario.id}"></span>
 				</td>
