--- a/leisure/src/main/resources/templates/leisure/index.html
+++ b/leisure/src/main/resources/templates/leisure/index.html
@@ -516,22 +516,29 @@
           </div> 
         </div>
         <div class="modal-body">
+			
+			
+			
           <!-- FORM LOGIN -->
-          <form class="row g-3" action="@{/login}" method="post">
+          <form class="row g-3" action="/usuario/login" method="post">
             <div class="col-md-7 mx-auto">
               <label for="inputEmail4" class="form-label">Email</label>
-              <input type="email" class="form-control" id="inputEmail4" name="email" th:value="${usuario.email}">
+              <input type="email" class="form-control" id="inputEmail4" name="email">
             </div>
             <div class="col-md-7 mx-auto">
               <label for="inputPassword4" class="form-label">Password</label>
-              <input type="password" class="form-control" id="inputPassword4" name="senha" th:value="${usuario.senha}">
+              <input type="password" class="form-control" id="inputPassword4" name="senha">
             </div>  
-            </div>
+        </div>
             <div class="mx-auto">
               <button type="submit" class="btn btn-success mt-5 mb-3">Entrar</button>
-              <button class="btn btn-primary login-btn mt-5 mb-3" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Não tenho Cadastro</button>
+              <button  type="button" class="btn btn-primary login-btn mt-5 mb-3" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Não tenho Cadastro</button>
             </div>
           </form>
+          
+          
+          
+          
       </div>
     </div>
   </div>
@@ -548,50 +555,65 @@
           </div> 
         </div>
         <div class="modal-body">
-          <form class="row g-3" action="/login/cadastrar-atualizar" method="post">
+			
+			
+			
+			
+          <form class="row g-3" action="/usuario/cadastrar-atualizar" method="post">
             <div class="col-md-12">
               <label for="inputNome" class="form-label">Nome completo</label>
-              <input type="text" class="form-control" id="inputNome" name="nome" th:value="${usuario.nome}">
+              <input type="text" class="form-control" id="inputNome" name="nome">
             </div>
+            
             <div class="col-md-12">
               <label for="inputEmail4" class="form-label">Email</label>
-              <input type="email" class="form-control" id="inputEmail4" name="email" th:value="${usuario.email}">
+              <input type="email" class="form-control" id="inputEmail4" name="email">
             </div>
-            <!-- <div class="col-md-12">
+            
+             <div class="col-md-12">
               <label for="inputData" class="form-label">Data de Nascimento</label>
-              <input type="date" class="form-control" id="inputData"> name="data" th:value="${usuario.data}"
-            </div> -->
+              <input type="date" class="form-control" id="inputData" name="data">
+            </div> 
+            
             <div class="col-md-6">
               <label for="inputPassword4" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="inputPassword4" name="senha" th:value="${usuario.senha}">
+              <input type="password" class="form-control" id="inputPassword4" name="senha">
             </div>
-            <!-- <div class="col-md-6">
+            
+            <!--  <div class="col-md-6">
               <label for="inputPassword4" class="form-label">Repetir senha</label>
-              <input type="password" class="form-control" id="inputPassword4" name="senha" th:value="${usuario.senha}">
-            </div>
+              <input type="password" class="form-control" id="inputPassword4" name="senha">
+            </div> --> 
+            
             <div class="col-md-3">
-              <label>Cep: <input class="form-control" name="cep" type="text" id="cep" value="" maxlength="9" onblur="pesquisacep(this.value);" /></label><br />
+              <label>Cep: <input class="form-control" name="cep" type="text" id="cep" maxlength="9" onblur="pesquisacep(this.value);"/></label><br />
             </div>
+            
             <div class="col-md-9">
-              <label>Rua: <input class="form-control" name="rua" type="text" id="rua" size="100" readonly /></label><br /> 
+              <label>CPF: <input class="form-control" name="cpf" type="text" id="cpf" size="100"/></label><br/> 
             </div>
+
             <div class="col-md-7">
-              <label>Cidade: <input class="form-control" name="cidade" type="text" id="cidade" size="100" readonly /></label><br /> 
+              <label>Telefone: <input class="form-control" name="telefone" type="text" id="telefone" size="100"/></label><br /> 
             </div>
+            
             <div class="col-md-3">
-              <label>Estado: <input class="form-control" name="uf" type="text" id="uf"  readonly /></label><br /> 
+              <label>Estado: <input class="form-control" name="estado" type="text" id="uf"  readonly /></label><br /> 
             </div> 
+            
             <div class="col-md-2">
-              <label>Número: <input class="form-control" name="numero" type="text" id="numero" size="40" maxlength="5" /></label><br />
+              <label>Número: <input class="form-control" name="numResidencia" type="text" id="numero" size="40" maxlength="5" value="0"/></label><br />
             </div>
+            
             <div class="col-md-12">
-              <label>Ponto de referência: <input class="form-control" name="referencia" type="text" id="numero" size="100" maxlength="100" /></label><br /> 
-            </div>  -->
+              <label>Complemento: <input class="form-control" name="complemento" type="text" id="numero" size="100" maxlength="100"/></label><br /> 
+            </div> 
             </div>
+            
             <div class="mx-auto">
               <button type="submit" class="btn btn-success mt-5 mb-3">Enviar</button>
+              <button type="button" class="btn btn-primary register-btn mt-5 mb-3" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Já tenho Cadastro</button>
           </form>
-              <button class="btn btn-primary register-btn mt-5 mb-3" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Já tenho Cadastro</button>
         </div>
       </div>
     </div>
@@ -701,5 +723,13 @@
   <!-- <script src="./style/bootstrap/js/bootstrap.bundle.js"></script> -->
   <!-- JS -->
   <script th:src="@{/style/ScriptBoot.js}"></script>
+  <script th:inline="javascript">
+	  /*<![CDATA[*/
+	  var mensagem = /*[[${mensagem}]]*/ null;
+	  if (mensagem != null) {
+		  alert(mensagem);
+	  }
+	  /*]]>*/
+  </script>
 </body>
 </html>
